[package]
authors = ["0xAlcibiades <alcibiades@warlock.xyz>"]
categories = ["asynchronous", "network-programming", "web-programming"]
description = "High level server for hyper and tower."
edition = "2021"
homepage = "https://github.com/warlock-labs/hyper-server"
keywords = ["tcp", "tls", "http", "hyper", "tokio"]
license = "MIT"
name = "hyper-server"
readme = "README.md"
repository = "https://github.com/valorem-labs-inc/hyper-server"
version = "0.7.0"

[dependencies]
async-stream = "0.3.5"
bytes = "1.7.1"
futures = "0.3.30"
http = "1.1.0"
http-body = "1.0.1"
http-body-util = "0.1.2"
hyper = "1.4.1"
hyper-rustls = "0.27.3"
hyper-util = { version = "0.1.8", features = ["server", "tokio", "server-auto", "server-graceful", "service"] }
pin-project = "1.1.5"
rand = "0.9.0-alpha.2"
rustls = { version = "0.23.13", features = ["zlib"] }
rustls-pemfile = "2.1.3"
tokio = { version = "1.40.0", features = ["net", "macros", "rt-multi-thread"] }
tokio-rustls = "0.26.0"
tokio-stream = { version = "0.1.16", features = ["net"] }
tokio-util = "0.7.12"
tower = { version = "0.5.1", features = ["util"] }
tracing = "0.1.40"
jemallocator = { version = "0.5", optional = true }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }
hyper = { version = "1.4.1", features = ["client"] }
tokio = { version = "1.40", features = ["rt", "net", "test-util"] }
tokio-util = { version = "0.7", features = ["compat"] }
tracing-subscriber = "0.3.18"

[[bench]]
name = "hello_world_tower_hyper_tls_tcp"
harness = false

[features]
jemalloc = ["jemallocator"]
